k8s/base/app1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels:
    # Pod Security Admission: reject privileged / root / hostPath pods in this namespace
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
